arquivo js linkado

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Primeiro teste Github</h1>
 
-    <p>Modificando arquivo</p>
+    <p>Modificando arquivo html</p>
 
     <script src="main.js"></script>
 
