--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Primeiro teste Github</h1>
 
     <p>Modificando arquivo html</p>
+    <p>Arquivo modificado novamente</p>
 
     <script src="main.js"></script>
 
