testando todos os arquivos

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>Modificando arquivo html</p>
     <p>Arquivo modificado novamente</p>
     <p>aaaaaaaa</p>
+    <p>teste 2</p>
 
     <script src="main.js"></script>
 
