--- a/index.html
+++ b/index.html
@@ -9,12 +9,6 @@
 <body>
     <h1>Primeiro teste Github</h1>
 
-    <p>Modificando arquivo html</p>
-    <p>Arquivo modificado novamente</p>
-    <p>aaaaaaaa</p>
-    <p>teste 2</p>
-
-    <script src="main.js"></script>
-
+    <p>Modificando arquivo</p>
 </body>
 </html>
