--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
     <h1>Primeiro teste Github</h1>
 
-    <p>Modificando arquivo</p>
+    <p>Modificando arquivo html</p>
+    <p>Arquivo modificado novamente</p>
+    <p>aaaaaaaa</p>
+    <p>teste 2</p>
+
+    <script src="main.js"></script>
+
 </body>
 </html>
